--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:allowBackup="true"
         android:theme="@style/AppTheme"
         android:icon="@drawable/ic_logo"
+        android:screenOrientation="portrait"
         android:label="@string/app_name">
         <uses-library android:name="android.test.runner" />
 
@@ -31,48 +32,48 @@
         <activity
             android:name="com.dzh.filemanagement.activity.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
+             
             android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name="com.dzh.filemanagement.activity.ImageWallActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"></activity>
+             
+             ></activity>
         <activity
             android:name="com.dzh.filemanagement.activity.VideoActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"></activity>
+             
+             ></activity>
         <activity
             android:name="com.dzh.filemanagement.activity.AudioActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"></activity>
+             
+             ></activity>
         <activity
             android:name="com.dzh.filemanagement.activity.DocumentsActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"></activity>
+             
+             ></activity>
         <activity
             android:name="com.dzh.filemanagement.activity.ZipActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"></activity>
+             
+             ></activity>
         <activity
             android:name="com.dzh.filemanagement.activity.ApplicationsActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"></activity>
+             
+             ></activity>
         <activity
             android:name="com.dzh.filemanagement.activity.ApksActivity"
-            android:screenOrientation="portrait"
+             
             android:theme="@style/AppTheme"></activity>
         <activity
             android:name="com.dzh.filemanagement.activity.AboutMeActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"></activity>
+             
+             ></activity>
         <activity
             android:name="com.dzh.filemanagement.activity.WelcomActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"></activity>
+             
+             ></activity>
         <activity
             android:name="com.dzh.filemanagement.activity.StartUI"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar"
+             
+             
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
