--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
 
 
     defaultConfig {
-        applicationId "com.cmcm.greendamexplorer"
+        applicationId "com.dzh.filemanagement"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode="1"
@@ -25,4 +27,5 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.github.dfqin:grantor:2.5'
     implementation project(':filelibrary')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.20"
 }
