--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,6 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
-
-
     defaultConfig {
         applicationId "com.dzh.filemanagement"
         minSdkVersion 15
@@ -27,5 +25,6 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.github.dfqin:grantor:2.5'
     implementation project(':filelibrary')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.20"
+    implementation project(path: ':ziplibrary')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
