--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.3.20'
+    ext {
+        compileSdkVersion = 28
+        minSdkVersion = 19
+        targetSdkVersion = 28
+
+        kotlin_version = '1.3.21'
+        appcompat_version = '1.0.2'
+        exifinterface_version = '1.0.0-rc02'
+    }
 
     repositories {
         jcenter()
