把v4包改成androidx包

--- a/filelibrary/build.gradle
+++ b/filelibrary/build.gradle
@@ -9,7 +9,7 @@ android {
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
@@ -34,12 +34,12 @@ dependencies {
 
     androidTestImplementation "org.mockito:mockito-core:$rootProject.ext.mockitocoreVersion"
 
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0-alpha4', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportSdkVersion"
-    implementation "com.android.support:recyclerview-v7:$rootProject.ext.supportSdkVersion"
+    implementation "androidx.appcompat:appcompat:$rootProject.ext.supportSdkVersion"
+    implementation "androidx.recyclerview:recyclerview:$rootProject.ext.supportSdkVersion"
     implementation "io.reactivex:rxjava:$rootProject.ext.rxjava"
     implementation "io.reactivex:rxandroid:$rootProject.ext.rxandroid"
     implementation "com.zhy:base-rvadapter:$rootProject.ext.baservadapterVersion"
