--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ allprojects {
         junitVersion = '4.12'
         mockitocoreVersion = '1.10.19'
 
-        supportSdkVersion = '28.0.0'
+        supportSdkVersion = '1.0.0-beta01'
         espressoVersion = '3.0.2'
         testRunnerVersion = '1.0.2'
         constraintLayoutVersion = '1.1.1'
