--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,19 +30,20 @@ dependencies {
     implementation files('libs/commons-io-2.5.jar')
 
     implementation 'com.blankj:utilcode:1.3.4'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
+    implementation 'androidx.cardview:cardview:1.0.0-beta01'
     implementation 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.2.4'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.github.Yalantis:GuillotineMenu-Android:1.2'
     implementation 'com.umeng.analytics:analytics:latest.integration'
     implementation 'com.google.code.gson:gson:2.2.4'
     implementation 'com.balysv:material-ripple:1.0.2'
     implementation 'com.gordonwong:material-sheet-fab:1.2.1'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     implementation 'com.github.yalantis:taurus:1.0.2'
     implementation 'com.jakewharton:butterknife:8.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
     testImplementation 'junit:junit:4.12'
+    implementation "com.google.android.material:material:1.0.0"
 }
