--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
     testImplementation 'junit:junit:4.12'
     implementation "com.google.android.material:material:1.0.0"
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.38'
 }
